Adds role for vscode tasks

--- a/roles/darwin/tasks/main.yaml
+++ b/roles/darwin/tasks/main.yaml
@@ -5,9 +5,8 @@
     - never
     - init
 
-# - name: Copy VS Code options
-#   synchronize:
-#     delete: false
-#     src: "{{ ansible_env.DOTFILES_REPO }}/vscode/"
-#     dest: "{{ ansible_env.HOME }}/Library/Application Support/Code/User/"
-
+- name: Copy VS Code options
+  synchronize:
+    delete: false
+    src: "{{ ansible_env.DOTFILES_REPO }}/vscode/"
+    dest: "{{ ansible_env.HOME }}/Library/Application Support/Code/User/"
