--- a/roles/gnupg/tasks/main.yaml
+++ b/roles/gnupg/tasks/main.yaml
@@ -1,3 +1,9 @@
+- name: Ensures GPG config directory exists
+  file:
+    path: "{{ ansible_env.HOME }}/.gnupg"
+    mode: "0777"
+    state: directory
+
 - name: Copies platform specific GPG configs
   template: src="{{ ansible_os_family }}_{{ item }}" dest="{{ ansible_env.HOME }}/.gnupg/{{ item }}"
   loop:
