--- a/roles/vscode/tasks/main.yaml
+++ b/roles/vscode/tasks/main.yaml
@@ -21,4 +21,4 @@
   command: code --install-extension {{ item }}
   with_items: '{{ extensions }}'
   ignore_errors: yes
-
+  when: ansible_facts['os_family'] == "Darwin"
