--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,10 @@ jobs:
         env:
           XDG_CONFIG_HOME: $HOME/.config
         run: |
+          cat <<EOF >>vars/user.yaml
+          user_email: "test@example.com"
+          dotfiles_path: "{{ third_party_src }}"/github.com/allancalix/dotfiles/"
+          EOF
           sudo apt-get install unzip ansible # Installs requirements
           ansible-galaxy collection install -r requirements.yaml
-          ansible-playbook --tags=all,init --ask-become-password devmachine.yaml
+          ansible-playbook --tags=all,init devmachine.yaml
