--- a/devmachine.yaml
+++ b/devmachine.yaml
@@ -10,6 +10,8 @@
     - common
     - role: homebrew
       when: ansible_facts['os_family'] == "Darwin"
+    - role: neovim
+      when: ansible_facts['os_family'] == "Debian"
     - rust
     - gnupg
     - dotfiles
