--- a/roles/common/tasks/layout.yaml
+++ b/roles/common/tasks/layout.yaml
@@ -21,7 +21,7 @@
 
 - name: Create directory for user binaries
   file:
-    path: "{{ ansible_env.HOME }}/bin"
+    path: "{{ user_bin }}"
     mode: "u=rwx,g=---,o=---"
     state: directory
 
