--- a/roles/gnupg/tasks/main.yaml
+++ b/roles/gnupg/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Ensures GPG config directory exists
   file:
     path: "{{ ansible_env.HOME }}/.gnupg"
-    mode: "0777"
+    mode: u+rwx,g-rwx,o-rwx
     state: directory
 
 - name: Copies platform specific GPG configs
