Update vscode settings

--- a/roles/vscode/files/settings.json
+++ b/roles/vscode/files/settings.json
@@ -1,26 +1,20 @@
 {
-    // General editor settings
+    "editor.fontFamily": "Input Mono, Fira Code Retina, DejaVu Sans Mono, monospace",
+    "editor.fontSize": 12,
+    "editor.minimap.enabled": false,
+    "editor.rulers": [80],
+    "editor.scrollBeyondLastLine": false,
+
+    "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
+
+    "vscode-neovim.neovimExecutablePaths.darwin": "/Users/allancalix/.nix-profile/bin/nvim",
+    "vscode-neovim.neovimExecutablePaths.linux": "/home/allancalix/.nix-profile/bin/nvim",
+
     "window.zoomLevel": 0,
+
     "workbench.startupEditor": "none",
     "workbench.fontAliasing": "antialiased",
-    "workbench.sideBar.location": "right",
-    "workbench.editor.showTabs": false,
     "workbench.settings.editor": "json",
-    "editor.fontFamily": "Inconsolata-g, Fira Code Retina, DejaVu Sans Mono, Source Code Pro",
-    "editor.fontSize": 12,
-    "editor.fontLigatures": false,
-    "editor.tabSize": 2,
-    "editor.insertSpaces": true,
-    "editor.minimap.enabled": false,
-    "editor.rulers": [
-        80,
-    ],
-    "editor.scrollBeyondLastLine": false,
-    "files.trimTrailingWhitespace": true,
-    "files.exclude": {
-        "**/target": true,
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-}
+    "workbench.editor.showTabs": false,
+
